@@ -4,4 +4,7 @@ Changelog
 2.13.0 (unreleased)
 -------------------
 
+- Implement the full dictionary protocol including `__getitem__`,
+  `__delitem__`, `__setitem__`, `__nonzero__`, `__iter__` and `__contains__`.
+
 - Released as separate package.
